# sadve

./: .travis.yml  CMakeLists.txt  README.md
in/: CMakeLists.txt
in/define/: CMakeLists.txt  define.c.in
in/simple/: CMakeLists.txt  simple.c.in
scripts/: CMakeLists.txt  sadve.sh  sadve.sh.in
src/: CMakeLists.txt  sadve.c
test/: CMakeLists.txt  system.sh
